Initial work on generating generic/specific opcode table mapping.
The naming is certainly less than ideal, and not all the CSA opcodes have
generic opcode maps yet. The handling of signed/unsigned/float/nothing also
leaves much to be desired, but it's not until the recomposition that it
starts really mattering.
Old/split llvm commit ID: 14e5aa7be137d0bbf68e912d90bbc0b8e845b7c7

--- a/llvm/utils/TableGen/CMakeLists.txt
+++ b/llvm/utils/TableGen/CMakeLists.txt
@@ -13,6 +13,7 @@ add_tablegen(llvm-tblgen LLVM
   CodeGenRegisters.cpp
   CodeGenSchedule.cpp
   CodeGenTarget.cpp
+  CSAOpSizes.cpp
   DAGISelEmitter.cpp
   DAGISelMatcherEmitter.cpp
   DAGISelMatcherGen.cpp
