Recommit "Link sub_group_block_assume_uniform.ll with OpenCL image callback library"
This recommits 1efae7e1391e25a6307b00b904e5a076b2306978.

Change-Id: I2708212af30a69e57ab6f56f8e3134fee778f219
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/310219
Tested-by: xmain_checkin <lab_iclt@iclgerrit.sc.intel.com>
Tested-by: zperf_checkin_xmain <lab_iclz@iclgerrit.sc.intel.com>
Reviewed-by: Wenju He <wenju.he@intel.com>
Reviewed-by: Dai, Chunyang <chunyang.dai@intel.com>
Reviewed-by: Creech, Timothy M <timothy.m.creech@intel.com>

--- a/opencl-intel/backend/libraries/ocl_builtins/CMakeLists.txt
+++ b/opencl-intel/backend/libraries/ocl_builtins/CMakeLists.txt
@@ -184,8 +184,8 @@ function( add_ocl_library OUTPUT_FILE_VAR PRECOMPILED_OUTPUT_FILE_VAR CLANG_COMP
     # link OpenCL image callback library (adding also intrinsic BI IR )
     add_custom_command (OUTPUT ${OUTPUT_DIR}/${OUTPUT_FILE}_noopt
       COMMENT "Linking ${OUTPUT_FILE}_noopt"
-      COMMAND ${LLVM_LINK} ${LLVM_LINK_PARAMS} -o ${OUTPUT_DIR}/${OUTPUT_FILE}_noopt ${TMP_FILES} ${CL_BUILTIN_SOURCE_DIR}/GENERIC/ll_intrinsics.ll
-      DEPENDS ${LLVM_LINK} ${TMP_FILES} ${CL_BUILTIN_SOURCE_DIR}/GENERIC/ll_intrinsics.ll
+      COMMAND ${LLVM_LINK} ${LLVM_LINK_PARAMS} -o ${OUTPUT_DIR}/${OUTPUT_FILE}_noopt ${TMP_FILES} ${CL_BUILTIN_SOURCE_DIR}/GENERIC/ll_intrinsics.ll ${CL_BUILTIN_SOURCE_DIR}/GENERIC/sub_group_block_assume_uniform.ll
+      DEPENDS ${LLVM_LINK} ${TMP_FILES} ${CL_BUILTIN_SOURCE_DIR}/GENERIC/ll_intrinsics.ll ${CL_BUILTIN_SOURCE_DIR}/GENERIC/sub_group_block_assume_uniform.ll
       VERBATIM
       )
     # link shared rtl and particular BI rtl
