--- a/opencl-intel/utils/cl_sys_utils/CMakeLists.txt
+++ b/opencl-intel/utils/cl_sys_utils/CMakeLists.txt
@@ -19,9 +19,13 @@ set_opencl_version()
 # Include the ASM sources
 if (CMAKE_SIZEOF_VOID_P EQUAL 8)
     if (WIN32)
-        CREATE_ASM_RULES( UTILS_ASM_ADD_TO_SOURCES_LIST kernel_execute_64.asm )
+        CREATE_ASM_RULES( UTILS_ASM_ADD_TO_SOURCES_LIST kernel_execute_64.asm chkstk_ms_64.asm )
     else (WIN32)
         CREATE_ASM_RULES(UTILS_ASM_ADD_TO_SOURCES_LIST linux64_utils.s)
+    endif (WIN32)
+else (CMAKE_SIZEOF_VOID_P EQUAL 8)
+    if (WIN32)
+        CREATE_ASM_RULES( UTILS_ASM_ADD_TO_SOURCES_LIST chkstk_ms_32.asm )
     endif (WIN32)
 endif (CMAKE_SIZEOF_VOID_P EQUAL 8)
 
