[NFC] Update the commit after changes have been made in vc-instrinsics repo. Changes described here: https://github.com/intel/vc-intrinsics/pull/51 Also allowing warnings in the GenXIntrisics component.
Change-Id: I5410aa35aa023e74a435edde1e74dcd13dcdf492
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/311439
Reviewed-by: Ammarguellat, Zahira <zahira.ammarguellat@intel.com>
Tested-by: Ammarguellat, Zahira <zahira.ammarguellat@intel.com>

--- a/llvm/lib/SYCLLowerIR/CMakeLists.txt
+++ b/llvm/lib/SYCLLowerIR/CMakeLists.txt
@@ -20,7 +20,7 @@ if (NOT TARGET LLVMGenXIntrinsics)
     include(FetchContent)
     FetchContent_Declare(vc-intrinsics
       GIT_REPOSITORY ${LLVMGenXIntrinsics_GIT_REPO} #INTEL_CUSTOMIZATION
-      GIT_TAG        4143fa153a471c4d54969a10bca472a53088f556
+      GIT_TAG         dbb67dfb9802fa0e5d7abffc59b5976295f1e87c
     )
     FetchContent_MakeAvailable(vc-intrinsics)
     FetchContent_GetProperties(vc-intrinsics)
@@ -74,3 +74,10 @@ add_llvm_component_library(LLVMSYCLLowerIR
 target_include_directories(LLVMSYCLLowerIR
   PRIVATE ${LLVM_MAIN_SRC_DIR}/projects/vc-intrinsics/GenXIntrinsics/include
   PRIVATE ${LLVM_BINARY_DIR}/projects/vc-intrinsics/GenXIntrinsics/include)
+
+## Remove the Werror for external component GenXIntrinsics.
+if(MSVC)
+  target_compile_options(LLVMGenXIntrinsics  PRIVATE "-WX-")
+else()
+  target_compile_options(LLVMGenXIntrinsics  PRIVATE "-Wno-error")
+endif()
