[sycl-post-link] Fixed build with shared libraries
Change-Id: Ic0df55acd4e9aa7cb90416650a325af8645294f1
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/312585
Reviewed-by: Vodopyanov, Dmitry <dmitry.vodopyanov@intel.com>
Tested-by: Vodopyanov, Dmitry <dmitry.vodopyanov@intel.com>

--- a/llvm/tools/sycl-post-link/CMakeLists.txt
+++ b/llvm/tools/sycl-post-link/CMakeLists.txt
@@ -19,6 +19,8 @@ set(LLVM_LINK_COMPONENTS
 # end INTEL_CUSTOMIZATION
   TransformUtils
   SYCLLowerIR
+  InstCombine
+  ScalarOpts
   )
 
 get_property(LLVMGenXIntrinsics_SOURCE_DIR GLOBAL PROPERTY LLVMGenXIntrinsics_SOURCE_PROP)
@@ -58,3 +60,5 @@ if(INTEL_CUSTOMIZATION)
     "Intel(R) oneAPI DPC++ Compiler"
     "SYCL post-link device code processing tool")
 endif()
+
+target_link_libraries(sycl-post-link PRIVATE LLVMGenXIntrinsics)
