[subgroups] Improve subgroup_test_type to test callee vectorization
Change-Id: I95dc7a9cef1f8b8432bf77beeb8e3129754d8ba2
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/312794
Tested-by: xmain_checkin <lab_iclt@iclgerrit.sc.intel.com>
Reviewed-by: Dai, Chunyang <chunyang.dai@intel.com>
Reviewed-by: Creech, Timothy M <timothy.m.creech@intel.com>

--- a/opencl-intel/tests/subgroup_test_type/CMakeLists.txt
+++ b/opencl-intel/tests/subgroup_test_type/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories( ${OCL_SOURCE_DIR}/tests/framework_test_type
 link_directories( ${TBB_LIB_DIR} )
 
 set( TARGET_LIBS test_utils  intelocl${BUILD_PLATFORM} )
+set_source_files_properties(SGEmulationTest.cpp PROPERTIES COMPILE_FLAGS -w)
 
 FIND_SOURCES()
 CALCULATE_TARGET_SOURCES()
