[VPlan][CM] Adjust cost for aligned/unaligned memrefs
The tuning is yet to be commenced.

Change-Id: I4ff8a70bff299230128c2704d4b1e94b5ecf10b5
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/302295
Reviewed-by: Kozhukhov, Sergey S <sergey.s.kozhukhov@intel.com>
Reviewed-by: Zverev, Sergey I <sergey.i.zverev@intel.com>
Tested-by: xmain_checkin <lab_iclt@iclgerrit.sc.intel.com>
Tested-by: zperf_checkin_xmain <lab_iclz@iclgerrit.sc.intel.com>
Reviewed-by: Creech, Timothy M <timothy.m.creech@intel.com>

--- a/llvm/unittests/Transforms/Vectorize/CMakeLists.txt
+++ b/llvm/unittests/Transforms/Vectorize/CMakeLists.txt
@@ -3,17 +3,24 @@ set(LLVM_LINK_COMPONENTS
   Core
   Vectorize
   AsmParser
+  CodeGen
+  MC
+  X86CodeGen
+  X86Info
+  X86Desc
+  Target
   )
 
 add_llvm_unittest(VectorizeTests
 # INTEL_CUSTOMIZATION
   IntelVPlanAlignmentAnalysisTest.cpp
+  IntelVPlanCGTest.cpp
   IntelVPlanCheckNodeParent.cpp
-  IntelVPlanDATest.cpp
   IntelVPlanClonePlanTest.cpp
+  IntelVPlanDATest.cpp
+  IntelVPlanTTIMemrefCostTest.cpp
   IntelVPlanValueTrackingTest.cpp
   IntelVPlanVPSubscriptTest.cpp
-  IntelVPlanCGTest.cpp
 # end INTEL_CUSTOMIZATION
   VPlanDominatorTreeTest.cpp
   VPlanLoopInfoTest.cpp
