[NFC] Use up-to-date spirv.hpp from llvm-spirv
Uplift to SPIR-V 1.2

Change-Id: I31802cae95732ceaa7e1e304c28acb5e4327b7e7
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/313526
Tested-by: Yilong Guo <yilong.guo@intel.com>
Reviewed-by: Dai, Chunyang <chunyang.dai@intel.com>
Reviewed-by: Sidorov, Dmitry <dmitry.sidorov@intel.com>
Reviewed-by: Creech, Timothy M <timothy.m.creech@intel.com>

--- a/opencl-intel/tests/FrontendDriver_test_type/CMakeLists.txt
+++ b/opencl-intel/tests/FrontendDriver_test_type/CMakeLists.txt
@@ -8,7 +8,7 @@ include_directories(
     # common_clang.h is in CCLANG_DEV_INCLUDE_DIRS
     ${CCLANG_DEV_INCLUDE_DIRS}
     ${OCL_SOURCE_DIR}/FrontendDriver
-    ${OCL_SOURCE_DIR}/externals/khronos/spirv/headers/include )
+    ${LLVM_EXTERNAL_LLVM_SPIRV_SOURCE_DIR}/lib )
 
 # Generate SPIR-V input for tests
 set( INPUT_FILE test.cl )
