--- a/opencl-intel/FrontendDriver/CMakeLists.txt
+++ b/opencl-intel/FrontendDriver/CMakeLists.txt
@@ -56,7 +56,10 @@ set( INCLUDE_DIRS
 
 if (OPENCL_INTREE_BUILD)
   if (LLVM_EXTERNAL_LLVM_SPIRV_SOURCE_DIR)
-    list(APPEND INCLUDE_DIRS ${LLVM_EXTERNAL_LLVM_SPIRV_SOURCE_DIR}/include)
+    list(APPEND INCLUDE_DIRS
+      ${LLVM_EXTERNAL_LLVM_SPIRV_SOURCE_DIR}/include
+      ${LLVM_EXTERNAL_LLVM_SPIRV_SOURCE_DIR}/lib
+    )
     add_definitions(-DOPENCL_INTREE_BUILD=1)
   endif()
 endif()
