Update version string for the compiler
Before:  Intel(R) oneAPI DPC++ Compiler
After:   Intel(R) oneAPI DPC++/C++ Compiler
Adjust tests as necessary as well.

Change-Id: If98303fbc2798f21facf21bccceb6800e44b1c25
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/313800
Reviewed-by: Toguchi, Michael D <michael.d.toguchi@intel.com>
Tested-by: Toguchi, Michael D <michael.d.toguchi@intel.com>

--- a/llvm/CMakeLists.txt
+++ b/llvm/CMakeLists.txt
@@ -54,7 +54,7 @@ if (INTEL_CUSTOMIZATION)
      set(FULL_VERSION "${FULL_VERSION}-${DPCPP_VERSION_QUALITY}")
   endif()
   set(DPCPP_PRODUCT_FULL_VERSION ${FULL_VERSION})
-  set(DPCPP_PRODUCT_NAME "Intel(R) oneAPI DPC++ Compiler")
+  set(DPCPP_PRODUCT_NAME "Intel(R) oneAPI DPC++/C++ Compiler")
   # The bitcode producer string must be encoded using only alphanumeric
   # characters plus '.' and '_'
   set(DPCPP_BITCODE_PRODUCER_STR "Intel.oneAPI.DPCPP.Compiler_${DPCPP_PRODUCT_VERSION}")
