--- a/clang/test/Analysis/lit.local.cfg
+++ b/clang/test/Analysis/lit.local.cfg
@@ -15,7 +15,7 @@ config.substitutions.append(('%normalize_plist',
     "grep -Ev '%s|%s|%s|%s'" % #INTEL
         ('^[[:space:]]*<string>.* version .*</string>[[:space:]]*$',
 # INTEL_CUSTOMIZATION
-         '^[[:space:]]*<string>.*DPC\+\+ .*</string>[[:space:]]*$',
+         '^[[:space:]]*<string>.*DPC\+\+\/C\+\+ .*</string>[[:space:]]*$',
 # end INTEL_CUSTOMIZATION
          '^[[:space:]]*<string>/.*</string>[[:space:]]*$',
          '^[[:space:]]*<string>.:.*</string>[[:space:]]*$')))
@@ -25,7 +25,7 @@ config.substitutions.append(('%normalize_sarif',
     "grep -Ev '^[[:space:]]*(%s|%s|%s|%s)[[:space:]]*$'" % #INTEL
         ('"uri": "file:.*%basename_t"',
 # INTEL_CUSTOMIZATION
-         '"version": "Intel\(R\) oneAPI DPC\+\+ .*"',
+         '"version": "Intel\(R\) oneAPI DPC\+\+\/C\+\+ .*"',
 # end INTEL_CUSTOMIZATION
          '"version": ".* version .*"',
          '"version": "2.1.0"')))
