[xptifw] Disable werror in xptifw build
Change-Id: I6e3a831e581a90e896a147c580635ac01ab783ee
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/313894
Reviewed-by: Alexander Batashev <alexander.batashev@intel.com>
Reviewed-by: Vodopyanov, Dmitry <dmitry.vodopyanov@intel.com>
Tested-by: Vodopyanov, Dmitry <dmitry.vodopyanov@intel.com>

--- a/xptifw/CMakeLists.txt
+++ b/xptifw/CMakeLists.txt
@@ -21,6 +21,13 @@ if(MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
 endif()
 
+## INTEL Remove the Werror for external component xptifw
+if(MSVC)
+  add_compile_options("-WX-")
+else()
+  add_compile_options("-Wno-error")
+endif()
+
 set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/lib/${CMAKE_BUILD_TYPE})
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
