Fix cmake warning: mis-matching arguments
Change-Id: I91aaef64b3a47926ac566df0d4ee8179cc9a9ed8
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/313907
Tested-by: xmain_checkin <lab_iclt@iclgerrit.sc.intel.com>
Reviewed-by: Dai, Chunyang <chunyang.dai@intel.com>
Reviewed-by: Creech, Timothy M <timothy.m.creech@intel.com>

--- a/opencl-intel/tests/CMakeLists.txt
+++ b/opencl-intel/tests/CMakeLists.txt
@@ -74,7 +74,7 @@ macro(compile_spv SOURCE OUTPUT)
     DEPENDS ${SPIRV_CONVERTER} ${BC_OUTPUT_FILE}
     COMMENT "Generate spirv binary file ${OUTPUT}"
     VERBATIM)
-endmacro(compile_test_spv)
+endmacro(compile_spv)
 
 
 # It is used by lit.cfg to find lit.site.cfg when user launches LIT tests from a
