--- a/opencl-intel/backend/tests/lit.cfg
+++ b/opencl-intel/backend/tests/lit.cfg
@@ -7,6 +7,7 @@ import re
 import lit.formats
 import lit.util
 
+from lit.llvm import llvm_config
 
 # Configuration file for the 'lit' test runner.
 
@@ -84,57 +85,11 @@ if config.test_exec_root is None:
 ###
 
 # LLVM tools substitutions
+llvm_config.use_default_substitutions()
 
-llvm_binary_dir = getattr(config, 'llvm_binary_dir', None)
-if llvm_binary_dir is None:
-    lit_config.fatal('llvm_binary_dir is not specified!')
+tool_patterns = ['clang', 'count', 'llc', 'llvm-as', 'llvm-config', 'not', 'opt', 'FileCheck']
 
-# For each occurrence of an llvm tool name as its own word, replace it
-# with the full path to the build directory holding that tool.  This
-# ensures that we are testing the tools just built and not some random
-# tools that might happen to be in the user's PATH. Thus this list should
-# includes every tool placed in $(LLVM_BINARY_DIR)
-                # Don't match 'bugpoint-' or 'clang-'.
-                # Don't match '/clang' or '-clang'.
-if os.pathsep == ';':
-    pathext = os.environ.get('PATHEXT', '').split(';')
-else:
-    pathext = ['']
-for pattern in [r"\bbugpoint\b(?!-)",   r"(?<!/|-)\bclang\b(?!-)",
-                r"\bgold\b",
-                r"\bllc\b",             r"\blli\b",
-                r"\bllvm-ar\b",         r"\bllvm-as\b",
-                r"\bllvm-bcanalyzer\b", r"\bllvm-config\b",
-                r"\bllvm-diff\b",       r"\bllvm-dis\b",
-                r"\bllvm-extract\b",    r"\bllvm-ld\b",
-                r"\bllvm-link\b",       r"\bllvm-mc\b",
-                r"\bllvm-nm\b",         r"\bllvm-prof\b",
-                r"\bllvm-ranlib\b",     r"\bllvm-shlib\b",
-                r"\bllvm-stub\b",       r"\bllvm2cpp\b",
-                # Don't match '-llvmc'.
-                r"(?<!-)\bllvmc\b",     r"\blto\b",
-                                        # Don't match '.opt', '-opt',
-                                        # '^opt' or '/opt'.
-                r"\bmacho-dump\b",      r"(?<!\.|-|\^|/)\bopt\b",
-                r"\bllvm-tblgen\b",     r"\bFileCheck\b",
-                r"\bFileUpdate\b",      r"\bc-index-test\b",
-                r"\bfpcmp\b",           r"\bllvm-PerfectShuffle\b",
-                # Handle these specially as they are strings searched
-                # for during testing.
-                r"\| \bcount\b",         r"\| \bnot\b"]:
-    # Extract the tool name from the pattern.  This relies on the tool
-    # name being surrounded by \b word match operators.  If the
-    # pattern starts with "| ", include it in the string to be
-    # substituted.
-    substitution = re.sub(r"^(\\)?((\| )?)\W+b([0-9A-Za-z-_]+)\\b\W*$",
-                          r"\2" + llvm_binary_dir + "/" + r"\4",
-                          pattern)
-    for ext in pathext:
-        substitution_ext = substitution + ext
-        if os.path.exists(substitution_ext):
-             substitution = substitution_ext
-             break
-    config.substitutions.append((pattern, substitution))
+llvm_config.add_tool_substitutions(tool_patterns)
 
 # OpenCL tools substitutions
 
@@ -178,4 +133,4 @@ if config.intree_build == "ON":
     else:
         path_var = 'LD_LIBRARY_PATH'
     config.environment[path_var] = os.path.pathsep.join((
-        config.llvm_lib_dir, config.environment[path_var]))
+        config.llvm_libs_dir, config.environment[path_var]))
