[SYCL][NFC] Factor out GenXIntrinsics git repo tag. (#3351)
Change-Id: Iec4da719aa73b07f660ace06e0cb3831f70b26fc
Signed-off-by: Konstantin S Bobrovsky <konstantin.s.bobrovsky@intel.com>
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/315316
Tested-by: xmain_checkin <lab_iclt@iclgerrit.sc.intel.com>
Reviewed-by: Bakhvalov, Denis <denis.bakhvalov@intel.com>
Reviewed-by: Chupin, Pavel V <pavel.v.chupin@intel.com>
Reviewed-by: Creech, Timothy M <timothy.m.creech@intel.com>

--- a/llvm/lib/SYCLLowerIR/CMakeLists.txt
+++ b/llvm/lib/SYCLLowerIR/CMakeLists.txt
@@ -3,6 +3,8 @@
 if (NOT TARGET LLVMGenXIntrinsics)
   if (NOT DEFINED LLVMGenXIntrinsics_SOURCE_DIR)
 
+    set(LLVMGenXIntrinsics_GIT_TAG b831d10e49e1fb8fcd92b5b50e2cdc8f9cb6277b)
+
     if( INTEL_CUSTOMIZATION )
       set( LLVMGenXIntrinsics_GIT_REPO
            ssh://git-amr-2.devtools.intel.com:29418/dpd_icl-vc-intrinsics.git )
@@ -20,7 +22,7 @@ if (NOT TARGET LLVMGenXIntrinsics)
     include(FetchContent)
     FetchContent_Declare(vc-intrinsics
       GIT_REPOSITORY ${LLVMGenXIntrinsics_GIT_REPO} #INTEL_CUSTOMIZATION
-      GIT_TAG         dbb67dfb9802fa0e5d7abffc59b5976295f1e87c
+      GIT_TAG        ${LLVMGenXIntrinsics_GIT_TAG}
     )
     FetchContent_MakeAvailable(vc-intrinsics)
     FetchContent_GetProperties(vc-intrinsics)
