[opencl-aot] Fix build error with MSVC compiler
Add compile flag "/experimental:preprocessor" for MSVC compiler when
building xmain with "-msvc" option.

Change-Id: I576f8f3136ca79c90ec147f16c98fbfb513df47e
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/335516
Reviewed-by: Dai, Chunyang <chunyang.dai@intel.com>
Tested-by: alloy <lab_icla@iclgerrit.sc.intel.com>
Reviewed-by: Mikhail Lychkov <mikhail.lychkov@intel.com>
(cherry picked from commit dfeeffb989c1aaa875a2a76105d2167f4929e55c)
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/336258

--- a/opencl/opencl-aot/CMakeLists.txt
+++ b/opencl/opencl-aot/CMakeLists.txt
@@ -12,10 +12,12 @@ set(OPENCL_AOT_PROJECT_NAME opencl-aot)
 
 add_llvm_tool(${OPENCL_AOT_PROJECT_NAME} ${TARGET_SOURCES})
 
-if(MSVC AND LLVM_BUILD_32_BITS)
+# INTEL_CUSTOMIZATION
+if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
   # MSVC can't expand variadic macros correctly. Add compile flag to around this.
   target_compile_options(${OPENCL_AOT_PROJECT_NAME} PRIVATE "/experimental:preprocessor")
 endif()
+# end INTEL_CUSTOMIZATION
 
 if(NOT MSVC)
   # FIXME: when built with clang it produces a warning.
