Revert "Replace OCLPrepareKernelForVecClone with ported one in Intel_DPCPPKernelTransforms"
This reverts commit 2b062c88b47d4ff94ab00430cfc93db83a6d990d.

Change-Id: I2d0c9017739c11b18cce869a01918c148cd0d538
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/336794
Reviewed-by: Wenju He <wenju.he@intel.com>
Tested-by: Wenju He <wenju.he@intel.com>

--- a/opencl-intel/backend/vectorizer/CMakeLists.txt
+++ b/opencl-intel/backend/vectorizer/CMakeLists.txt
@@ -75,6 +75,7 @@ set(TARGET_INCLUDE_FILES
   LoopHandler/LoopStridedCodeMotion.h
   LoopHandler/LoopWIAnalysis.h
   OCLBranchProbability/OCLBranchProbability.h
+  OCLVecClone/OCLPrepareKernelForVecClone.h
   OCLVecClone/OCLVecClone.h
   OCLVecClone/OCLPostVect.h
   OCLVPOCheckVF/OCLVPOCheckVF.h
@@ -114,6 +115,7 @@ set(TARGET_SOURCE_FILES
   LoopHandler/LoopStridedCodeMotion.cpp
   LoopHandler/LoopWIAnalysis.cpp
   OCLBranchProbability/OCLBranchProbability.cpp
+  OCLVecClone/OCLPrepareKernelForVecClone.cpp
   OCLVecClone/OCLVecClone.cpp
   OCLVecClone/OCLPostVect.cpp
   OCLVPOCheckVF/OCLVPOCheckVF.cpp
