[DPCPPKernelTransforms] Add pass for SPV-IR preprocessing
- Add "opencl.ocl.version" metadata to SYCL module.

Change-Id: Iddabe5852ad7c8c94c263be72b488563b915cc92
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/336823
Reviewed-by: Yilong Guo <yilong.guo@intel.com>
Tested-by: Yilong Guo <yilong.guo@intel.com>

--- a/llvm/lib/Transforms/Intel_DPCPPKernelTransforms/CMakeLists.txt
+++ b/llvm/lib/Transforms/Intel_DPCPPKernelTransforms/CMakeLists.txt
@@ -12,6 +12,7 @@ add_llvm_component_library(LLVMIntel_DPCPPKernelTransforms
   DPCPPKernelLoopUtils.cpp
   DPCPPKernelWGLoopCreator.cpp
   DPCPPKernelAnalysis.cpp
+  DPCPPPreprocessSPIRVFriendlyIR.cpp
   ImplicitArgsAnalysis.cpp
   InternalizeNonKernelFunc.cpp
   LocalBufferAnalysis.cpp
