[SOAToAOSOP] (CMPLRLLVM-30335): Framework to implement SOAToAOS for opaque pointers.
Change-Id: I56655413ee15da1d6b27293b450bdcb302463bd7
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/337021
Reviewed-by: Battini, Prasad V <prasad.v.battini@intel.com>
Tested-by: Battini, Prasad V <prasad.v.battini@intel.com>
Reviewed-by: chenyang liu <chenyang.liu@intel.com>
Reviewed-by: Chrulski, Christopher M <christopher.m.chrulski@intel.com>

--- a/llvm/Intel_OptionalComponents/DTrans/lib/Transforms/CMakeLists.txt
+++ b/llvm/Intel_OptionalComponents/DTrans/lib/Transforms/CMakeLists.txt
@@ -32,6 +32,7 @@ add_llvm_component_library(LLVMIntel_DTransOpt
   MemManageTrans.cpp
   PaddedPtrPropagation.cpp
   SOAToAOS.cpp
+  SOAToAOSOP.cpp
   SOAToAOSArrays.cpp
   SOAToAOSClassInfo.cpp
   SOAToAOSCommon.cpp
