[CodeAlign][DTrans] (CMPLRLLVM-30556): Increase alignment of a routine in 523.Xalancbmk
523.Xalancbmk performance varies 4% on ICX due to a code alignment
of a routine. A heuristic is used to select the routine and increase
alignment of the routine only when SOAToAOS is triggered.

Change-Id: Ice13fb74abe40e83ca04655ad0be1284e620ed23
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/337211
Reviewed-by: Cox, Robert <robert.cox@intel.com>
Reviewed-by: Chrulski, Christopher M <christopher.m.chrulski@intel.com>
Tested-by: Battini, Prasad V <prasad.v.battini@intel.com>
Reviewed-by: chenyang liu <chenyang.liu@intel.com>

--- a/llvm/Intel_OptionalComponents/DTrans/lib/Transforms/CMakeLists.txt
+++ b/llvm/Intel_OptionalComponents/DTrans/lib/Transforms/CMakeLists.txt
@@ -15,6 +15,7 @@ add_llvm_component_library(LLVMIntel_DTransOpt
   AOSToSOA.cpp
   AOSToSOAOP.cpp
   AnnotatorCleaner.cpp
+  CodeAlign.cpp
   CommuteCond.cpp
   DeleteField.cpp
   DeleteFieldOP.cpp
