[CG] Fold loads to gather.
Fix CMPLRLLVM-29541.

Change-Id: I3a3e21e2104f5ffea3ad1cd5a1ef90496aaac9d7
Reviewed-on: https://git-amr-2.devtools.intel.com/gerrit/337231
Tested-by: xmain_checkin <lab_iclt@iclgerrit.sc.intel.com>
Tested-by: zperf_checkin_xmain <lab_iclz@iclgerrit.sc.intel.com>
Reviewed-by: Pei, Gen <gen.pei@intel.com>
Reviewed-by: chenyang liu <chenyang.liu@intel.com>

--- a/llvm/lib/CodeGen/CMakeLists.txt
+++ b/llvm/lib/CodeGen/CMakeLists.txt
@@ -7,6 +7,7 @@ intel_add_file(INTEL_SOURCE_FILES_TO_BUILD
   Intel_FMACGCommon.cpp
   Intel_FMACommon.cpp
   Intel_Float128ExpandPass.cpp
+  Intel_FoldLoadsToGather.cpp
   Intel_MIRMatcher.cpp
   Intel_MachineOptReportEmitter.cpp
   Intel_RAReportEmitter.cpp
